src/objects/TR1__Gross_Profit__c.object
<CustomObject>
    <fields>
        <fullName>TR1__AGP_Amount__c</fullName>
        <label>AGP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gross Profits</relationshipLabel>
        <relationshipName>Gross_Profits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Booking_Date__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Booking_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Closing_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report</label>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipLabel>Gross Profits</relationshipLabel>
        <relationshipName>Gross_Profits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Credit_Type__c</fullName>
        <label>Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Job Credit</fullName>
                </value>
                <value>
                    <fullName>Candidate Credit</fullName>
                </value>
                <value>
                    <fullName>Marketing Credit</fullName>
                </value>
                <value>
                    <fullName>Other Credit</fullName>
                </value>
                <value>
                    <fullName>Other2 Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Current_Year_Consulting_Forecast__c</fullName>
        <formula>$User.TR1__Current_Year_Consulting_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Current Year Consulting Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Current_Year_Perm_Forecast__c</fullName>
        <formula>$User.TR1__Current_Year_Perm_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Current Year Perm Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Current_Year_Total_Forecas__c</fullName>
        <formula>$User.TR1__Current_Year_Total_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Current Year Total Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Division__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Expense_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Report</label>
        <referenceTo>TR1__Expense_Report__c</referenceTo>
        <relationshipLabel>Gross Profits</relationshipLabel>
        <relationshipName>Gross_Profits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__GP_Amount__c</fullName>
        <label>GP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Gross_Profit_Date__c</fullName>
        <label>Gross Profit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Include_in_GP_Reports__c</fullName>
        <formula>TEXT ( TR1__Recruiter_Name__r.TR1__Include_in_GP_Reports__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include in GP Reports</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Gross Profits</relationshipLabel>
        <relationshipName>Gross_Profits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Last_Year_Consulting_Forecast__c</fullName>
        <formula>$User.TR1__Last_Year_Consulting_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Last Year Consulting Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Last_Year_Perm_Forecast__c</fullName>
        <formula>$User.TR1__Last_Year_Perm_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Last Year Perm Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Last_Year_Total_Forecast__c</fullName>
        <formula>$User.TR1__Last_Year_Total_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Last Year Total Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Person_Placed__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Person_Placed__r.FirstName &amp; &quot; &quot; &amp;  TR1__Closing_Report__r.TR1__Person_Placed__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Placed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Recruiter_Id__c</fullName>
        <label>Recruiter Id</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Recruiter_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruiter Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gross_Profits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet</label>
        <referenceTo>TR1__Timesheet__c</referenceTo>
        <relationshipLabel>Gross Profits</relationshipLabel>
        <relationshipName>Gross_Profits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Week_Ending__c</fullName>
        <formula>TR1__Timesheet__r.TR1__Week_Ending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Ending</label>
        <type>Date</type>
    </fields>
    <label>Gross Profit</label>
    <listViews>
        <fullName>TR1__All_GrossProfits</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GP-{MM}{DD}{YYYY}-{0}</displayFormat>
        <label>Gross Profit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gross Profits</pluralLabel>
    <recordTypes>
        <fullName>TR1__Consulting</fullName>
        <active>true</active>
        <description>Gross profit from consulting timesheet.</description>
        <label>Consulting</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Permanent</fullName>
        <active>true</active>
        <description>Gross profit from a permanent closing report.</description>
        <label>Permanent</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Retained</fullName>
        <active>true</active>
        <description>Gross profit for retained.</description>
        <label>Retained</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>